--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -90,7 +90,7 @@
                     </li>
                     {% endif %}
                 </ul>
-                <p class="copyright text-muted">
+                <!-- <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
                     Theme on <a href="{{ site.github_repo }}">GitHub</a> |
@@ -99,7 +99,7 @@
                         frameborder="0" scrolling="0" width="100px" height="20px"
                         src="https://ghbtns.com/github-btn.html?user={{ site.github_username }}&repo={{ site.github_username }}.github.io&type=star&count=true" >
                     </iframe>
-                </p>
+                </p> -->
             </div>
         </div>
     </div>
